Proyecto2/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-producer
  annotations:
    spec.ingressClassName: nginx  # Cambiando la anotación deprecada a spec.ingressClassName
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST"
  namespace: kafka
spec:
  rules:
  - host: 34.171.32.195.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-producer-client
            port:
              number: 3000
